Fixup with good spacing import

--- a/packages/styles/framework/src/components/_autolayout.scss
+++ b/packages/styles/framework/src/components/_autolayout.scss
@@ -1,9 +1,9 @@
 body:not(.is-tight) {
   .box {
-    margin-top: 16px;
+    margin-top: 12px;
   }
   .box:not(:first-child) + * {
-    margin-top: 16px;
+    margin-top: 12px;
   }
   * + .box {
     margin-top: 8px;
@@ -12,27 +12,27 @@ body:not(.is-tight) {
     margin-top: 8px;
   }
   .card {
-    margin-top: 16px;
+    margin-top: 12px;
   }
   .button {
-    margin-top: 16px;
+    margin-top: 12px;
   }
   .accordions {
-    margin-top: 16px;
+    margin-top: 12px;
   }
   .alert {
-    margin-top: 16px;
+    margin-top: 12px;
   }
   .field {
     margin-top: 8px;
   }
   .chips-list {
-    margin-top: 16px;
+    margin-top: 12px;
   }
   .tags {
-    margin-top: 16px;
+    margin-top: 12px;
   }
   .chips-list {
-    margin-top: 16px;
+    margin-top: 12px;
   }
 }
